Fix links above content even when menu collapsed

--- a/css/header-open.css
+++ b/css/header-open.css
@@ -31,6 +31,7 @@
 
         flex: 1;
 
+        background-color: #ffffff;
         box-shadow: 0 3px 3px 0 rgba(0,0,0,0.22);
     }
 
@@ -47,6 +48,8 @@
 
         flex-direction: column;
         order: 2;
+        align-items: center;
+        justify-content: center;
 
         width: 33%;
     }
@@ -63,22 +66,34 @@
     }
 
     .menu-link {
+        display: flex;
+
+        align-items: center;
+        justify-content: center;
+
+        padding: 1rem;
+
         border-left: none;
     }
     .menu-link:first-child {
         margin-top: 1rem;
-        padding-top: 1rem;
 
         border-top: 1px solid #cccccc;
     }
     .menu-link:last-child {
         margin-bottom: 1rem;
-        padding-bottom: 1rem;
 
         border-bottom: 1px solid #cccccc;
     }
 
     .menu-hamburger {
+        position: absolute;
+        top: -99rem;
+
+        display: flex;
+
+        flex-direction: column;
+
         width: 100%;
         height: 0;
 
@@ -121,6 +136,7 @@
      */
     .hamburger-button {
         position: absolute;
+        z-index: 10;
         top: 1rem;
         right: 0;
 
